--- a/SimpleProject/Views/Base.lproj/Main.storyboard
+++ b/SimpleProject/Views/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <tableViewController id="xSW-xS-qqU" customClass="ListViewController" customModule="SimpleProject" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Y4P-ku-bdu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
@@ -88,7 +88,7 @@
                                         <buttonConfiguration key="configuration" style="gray" image="magnifyingglass" catalog="system"/>
                                         <connections>
                                             <action selector="searchButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="5sX-nt-Wgi"/>
-                                            <segue destination="CHn-mC-UYV" kind="show" identifier="showSearchresult" id="HAm-oN-Bgp"/>
+                                            <segue destination="CHn-mC-UYV" kind="presentation" identifier="searchResult" modalPresentationStyle="automatic" id="Hnl-xN-Iwa"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -120,11 +120,11 @@
             <objects>
                 <viewController id="HuW-m9-vo1" customClass="DetailsViewController" customModule="SimpleProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OQI-ge-1OE">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="1400"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1346"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mwv-gK-Sqk">
-                                <rect key="frame" x="0.0" y="88" width="414" height="1222"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="1251"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jnx-8p-zyX">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1222"/>
@@ -254,7 +254,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="pb9-z2-ZZW"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="ubD-ch-Yea">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="108"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -268,7 +268,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="HAm-oN-Bgp"/>
+        <segue reference="Hnl-xN-Iwa"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="background" width="736" height="1104"/>
